--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,38 +2,29 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Hyoyeon Lee
     - name: Date of Birth
-      value: 14th March 1879
+      value: 18th September 2002
     - name: Languages
-      value: English, German
+      value: Korean, English, German
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: BSc
+      institution: University of Bristol, United Kingdom
+      year: 2022
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+        - Year 3: Machine Learning (92%), Computer Graphics (70%), Image Processing and Computer Vision & Types and Lambda Calculus (64%), and Applied Data Science.
+        - Year 2: Achieved First Class with an average of 77%, Ranked 15/116 - Top 10% from Programming Language and Computation
+
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Assistant
+      institution: Faculty of Engineering, University of Bristol
+      year: 2024
       description:
         - Description 1.
         - Description 2.
